added path stuff and katex rending

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -17,12 +17,14 @@
 <body>
     <div id="sidebar"></div>
     <div id="container">
+        <canvas id="finalDrawCanvas"></canvas>
         <canvas id="drawCanvas"></canvas>
         <div class="messenger out">
             <div class="messageContainer">
             </div>
             <div class="inputContainer">
                 <input type="text" class="input" placeholder="Enter message here!" />
+                <div class="latexInput"><i class="fa fa-pencil"></i></div>
             </div>
             <div class="switchButton"><i class="arrowToggle fa fa-arrows-h"></i></div>
         </div>
@@ -34,7 +36,7 @@
         var boardId = "@ViewBag.BoardId";
     </script>
 
-    @*@Html.Partial("KatexMessageModal")*@
+    @Html.Partial("KatexMessageModal")
 
     @Scripts.Render("~/bundles/app_scripts")
     @Scripts.Render("~/bundles/modernizr")
