--- a/CollaborationBoard/Views/Shared/KatexMessageModal.cshtml
+++ b/CollaborationBoard/Views/Shared/KatexMessageModal.cshtml
@@ -1,82 +1,21 @@
-﻿<div class="katexContainer">
-    <div class="katexModal">
-        <div class="normalText">
-            <textarea class="input"></textarea>
-        </div>
-        <div class="renderedText">
+﻿<div class="katexModal modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Modal title</h4>
+            </div>
+            <div class="katexBody modal-body">
+                <div class="normalText">
+                    <textarea class="input"></textarea>
+                </div>
+                <div class="renderedText">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
-
-<script>
-    function findEquations(text) {
-        var result = [];
-        var first = -1;
-
-        for (var i = 0; i < text.length; i++) {
-            if (text[i] == "`") {
-                if (first == -1) {
-                    first = i;
-                }
-                else {
-                    result.push({
-                        first: first,
-                        second: i
-                    });
-
-                    first = -1;
-                }
-            }
-        }
-
-        return result;
-    }
-
-    function convertStringToHtml(text) {
-        var equations = findEquations(text);
-        var resultHtml = "";
-
-        var endOfPreviousEquation = -1;
-
-        for (var i = 0; i < equations.length; i++) {
-            var currentEquation = equations[i];
-
-            var html = katex.renderToString(text.substring(currentEquation.first + 1, currentEquation.second));
-
-            resultHtml += text.substring(endOfPreviousEquation + 1, currentEquation.first);
-
-            resultHtml += html;
-
-            endOfPreviousEquation = currentEquation.second;
-        }
-
-        resultHtml += text.substring(endOfPreviousEquation + 1, text.length);
-
-        if (equations.length == 0) {
-            resultHtml = text;
-        }
-
-        return resultHtml;
-    }
-
-    window.addEventListener("load", function () {
-        var $input = $(".katexModal .normalText .input");
-        var $output = $(".katexModal .renderedText");
-
-        $input.keyup(function (e) {
-            var text = this.value;
-            var html;
-
-            try {
-                html = convertStringToHtml(text);
-                //html = katex.renderToString(text);
-            }
-            catch (e) {
-                $output.text(e.message);
-                return;
-            }
-
-            $output.html(html);
-        });
-    });
-</script>
