--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -30,7 +30,7 @@
     overflow: hidden;
     cursor: default;
 
-    #drawCanvas {
+    #drawCanvas, #finalDrawCanvas {
         background-color: #ffffff;
         cursor: default;
         box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.75);
@@ -89,6 +89,7 @@
 @messengerMargin: 40px;
 @messengerSwitchButtonWidth: 50px;
 @messengerTransitionTime: 500ms;
+@latexButtonWidth: 25px;
 
 .messenger {
     -webkit-flex: 1 1 auto;
@@ -194,16 +195,38 @@
     .inputContainer {
         width: 100%;
         display: inline-block;
-        background-color: red;
 
-        .input {    
+        .input {
+            float: left;
             height: @inputHeight;
             outline: 0;
-            width: 100%;
+            width: ~"calc(100%" - @latexButtonWidth~")";
             border: none;
             background-color: #f6f6f6;
             padding-left: 5px;
             resize: none;
+        }
+
+        .latexInput {
+            float: left;
+            width: @latexButtonWidth;
+            font-size: 13pt;
+            text-align: center;
+            background-color: #f6f6f6;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .latexInput:hover {
+            background-color: #e8e8e8;
+        }
+
+        .latexInput:active {
+            background-color: #ffffff;
+        }
+
+        .latexInput:hover:active {
+            background-color: #f1f1f1;
         }
 
         .input:hover {
@@ -277,45 +300,34 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
-.katexContainer {
-    .fullSize;
-    .flexBox;
-    z-index: 9999;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
+.katexBody {
+    width: 100%;
+    height: 300px;
 
-    .katexModal {
-        margin: auto;
+    .normalText {
+        height: 100%;
         width: 50%;
-        height: 50%;
-        background-color: white;
-        min-width: 400px;
-        min-height: 300px;
+        float: left;
 
-        .normalText {
+        .input {
+            width: 100%;
             height: 100%;
-            width: 50%;
-            float: left;
-
-            .input {
-                width: 100%;
-                height: 100%;
-                resize: none;
-                outline: none;
-                border: 1px solid grey;
-            }
+            resize: none;
+            outline: none;
+            border: 1px solid grey;
         }
+    }
 
-        .renderedText {
-            height: 100%;
-            width: 50%;
-            float: right;
-            padding: 10px;
-            font-size: 15pt;
-            border-right: 1px solid grey;
-            border-top: 1px solid grey;
-            border-bottom: 1px solid grey;
-        }
+    .renderedText {
+        height: 100%;
+        width: 50%;
+        float: right;
+        padding: 10px;
+        font-size: 15pt;
+        border-right: 1px solid grey;
+        border-top: 1px solid grey;
+        border-bottom: 1px solid grey;
+        white-space: pre-wrap;
+        word-wrap: break-word;
     }
 }
