--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -18,7 +18,8 @@
     <div id="sidebar"></div>
     <div id="container">
         <canvas id="finalDrawCanvas"></canvas>
-        <canvas id="drawCanvas"></canvas>
+        <div id="bufferContainer">
+        </div>
         <div class="messenger out">
             <div class="messageContainer">
             </div>
