--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -53,7 +53,6 @@
     #finalDrawCanvas, #drawCanvas {
         .canvasType;
     }
-
 }
 
 .cursorContainer {
@@ -91,11 +90,22 @@
     background-color: red;
 }
 
+@toolboxWidth: 500px;
+
+#toolbox {
+    position: absolute;
+    top: 0px;
+    left: ~"calc(100vw / 2" - @toolboxWidth / 2 ~")";
+    width: @toolboxWidth;
+    height: 20px;
+    background-color: red;
+}
+
 @messageWidth: 300px;
-@messageMargin: 0px;
+@messageMargin: 10px;
 @sameUserMessageMargin: 0px;
 @inputHeight: 25px;
-@messengerBackColor: white;
+@messengerBackColor: #e8e8e8;
 @messageColor: white;
 @messageShadowColor: #b4b4b4;
 @messageHeaderColor: #ffd800;
@@ -141,7 +151,7 @@
             }
 
             .header {
-                height: 30px;
+                height: 25px;
                 font-size: 15pt;
                 font-weight: bold;
                 width: 100%;
@@ -149,8 +159,9 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
-                padding: 3px;
                 font-family: 'Open Sans Condensed';
+                color: rgba(0, 0, 0, 0.3);
+                padding-left: 5px;
             }
 
             .emptyHeader {
