--- a/CollaborationBoard/Views/Shared/KatexMessageModal.cshtml
+++ b/CollaborationBoard/Views/Shared/KatexMessageModal.cshtml
@@ -1,15 +1,15 @@
-﻿<div class="katexModal modal fade">
+﻿<div id="katexModal" class=" modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 class="modal-title">Modal title</h4>
             </div>
-            <div class="katexBody modal-body">
-                <div class="normalText">
-                    <textarea class="input"></textarea>
+            <div id="katexBody" class="katexBody modal-body">
+                <div id="normalText">
+                    <textarea id="katexInput"></textarea>
                 </div>
-                <div class="renderedText">
+                <div id="renderedText">
                 </div>
             </div>
             <div class="modal-footer">
