renamed variables to stop being dependent on katex as the latex provider, and added several comments to clarify the purpose of some variables

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -39,7 +39,7 @@
         var boardId = "@ViewBag.BoardId";
     </script>
 
-    @Html.Partial("KatexMessageModal")
+    @Html.Partial("LatexMessageModal")
 
     @Scripts.Render("~/bundles/app_scripts")
     @Scripts.Render("~/bundles/modernizr")
