--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -325,7 +325,7 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
-#katexBody {
+#latexBody {
     width: 100%;
     height: 300px;
 
@@ -334,7 +334,7 @@
         width: 50%;
         float: left;
 
-        #katexInput {
+        #latexInput {
             width: 100%;
             height: 100%;
             resize: none;
