--- a/CollaborationBoard/Views/Shared/LatexMessageModal.cshtml
+++ b/CollaborationBoard/Views/Shared/LatexMessageModal.cshtml
@@ -1,20 +1,20 @@
-﻿<div id="katexModal" class=" modal fade">
+﻿<div id="latexModal" class=" modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 class="modal-title">Modal title</h4>
             </div>
-            <div id="katexBody" class="katexBody modal-body">
+            <div id="latexBody" class="latexBody modal-body">
                 <div id="normalText">
-                    <textarea id="katexInput"></textarea>
+                    <textarea id="latexInput"></textarea>
                 </div>
                 <div id="renderedText">
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary katexSave">Save changes</button>
+                <button type="button" id="latexSave" class="btn btn-primary ">Save changes</button>
             </div>
         </div>
     </div>
