--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -15,31 +15,19 @@
     @Styles.Render("~/bundles/app_styles")
 </head>
 <body>
-    <div id="sidebar"></div>
-    <div id="container">
-        <canvas id="finalDrawCanvas"></canvas>
-        <div id="bufferContainer">
-        </div>
-        <div id="messenger" class="out">
-            <div id="messageContainer">
-            </div>
-            <div id="inputContainer">
-                <input type="text" id="messageInput" placeholder="Enter message here!" />
-                <div id="latexInputButton"><i class="fa fa-pencil"></i></div>
-            </div>
-            <div id="switchButton"><i class="arrowToggle fa fa-arrows-h"></i></div>
-        </div>
+    <canvas id="finalDrawCanvas"></canvas>
+    <div id="bufferContainer">
     </div>
 
     <div id="toolbox"></div>
-
     <div id="loadingBlind"></div>
+
+    @Html.Partial("LatexMessageModal")
+    @Html.Partial("Messenger")
 
     <script>
         var boardId = "@ViewBag.BoardId";
     </script>
-
-    @Html.Partial("LatexMessageModal")
 
     @Scripts.Render("~/bundles/app_scripts")
     @Scripts.Render("~/bundles/modernizr")
