--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -15,8 +15,10 @@
     @Styles.Render("~/bundles/app_styles")
 </head>
 <body>
-    <canvas id="finalDrawCanvas"></canvas>
-    <div id="bufferContainer">
+    <div id="canvasContainer">
+        <canvas id="finalDrawCanvas"></canvas>
+        <div id="bufferContainer">
+        </div>
     </div>
 
     <div id="toolbox"></div>
