--- a/CollaborationBoard/Views/Board/Messenger.cshtml
+++ b/CollaborationBoard/Views/Board/Messenger.cshtml
@@ -1,9 +1,9 @@
 ﻿<div id="messenger" class="out">
+    <div id="messengerTopBar"></div>
     <div id="messageContainer">
     </div>
     <div id="inputContainer">
         <input type="text" id="messageInput" placeholder="Enter message here!" />
         <div id="latexInputButton"><i class="fa fa-pencil"></i></div>
     </div>
-    <div id="switchButton"><i class="arrowToggle fa fa-arrows-h"></i></div>
 </div>
