added flashing effect when new messages are not seen

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -139,6 +139,10 @@
     cursor: pointer;
 }
 
+#messengerTopBar.flashing {
+    background-color: #ffd800;
+}
+
 #messageContainer {
     width: 100%;
     flex-flow: column;
