fixed error where user's tool is not added

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -24,7 +24,7 @@
     display: flexbox;
 }
 
-@canvasSize: 700px;
+@canvasSize: 2000px;
 
 .canvasType {
     cursor: default;
@@ -41,7 +41,7 @@
     left: 0px;
     width: @canvasSize;
     height: @canvasSize;
-    background-color: #e8e8e8;
+    background-color: white;
 }
 
 #bufferContainer {
@@ -92,7 +92,7 @@
     background-color: red;
 }
 
-@toolboxWidth: 500px;
+@toolboxWidth: 2000px;
 
 #toolbox {
     position: absolute;
@@ -101,6 +101,7 @@
     width: @toolboxWidth;
     height: 20px;
     background-color: red;
+    display: none;
 }
 
 @messageWidth: 300px;
