--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -115,7 +115,7 @@
 @messengerBackColor: #e8e8e8;
 @messageColor: white;
 @messageShadowColor: #b4b4b4;
-@messageHeaderColor: #ffd800;
+@messageHeaderColor: white;
 @messengerMargin: 40px;
 @messengerSwitchButtonWidth: 50px;
 @messengerTransitionTime: 500ms;
@@ -168,21 +168,33 @@
         }
 
         .header {
-            height: 25px;
-            font-size: 15pt;
+            padding-top: 2px;
+            padding-left: 2px;
+            font-size: 10pt;
             font-weight: bold;
             width: 100%;
             background-color: @messageHeaderColor;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
             color: rgba(0, 0, 0, 0.3);
-            padding-left: 5px;
+
+            .detail {
+                text-overflow: ellipsis;
+                overflow: hidden;
+                width: 50%;
+            }
+
+            .name {
+                .detail;
+                text-align: left;
+            }
+
+            .time {
+                .detail;
+                text-align: right;
+            }
         }
 
         .emptyHeader {
-            height: 0px;
-            padding: initial;
+            display: none;
         }
 
         .footer {
