made date and time in messages fit onto a single line

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -185,11 +185,13 @@
             .name {
                 .detail;
                 text-align: left;
+                float: left;
             }
 
             .time {
                 .detail;
                 text-align: right;
+                float: right;
             }
         }
 
