--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -21,7 +21,9 @@
         </div>
     </div>
 
-    <div id="toolbox"></div>
+    <div id="toolbox">
+        <div id="eraser" class="toolBoxItem"><i class="fa fa-eraser"></i></div>
+    </div>
     <div id="loadingBlind"></div>
 
     @Html.Partial("LatexMessageModal")
