--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -22,6 +22,7 @@
     </div>
 
     <div id="toolbox">
+        <div id="drawer" class="toolBoxItem"><i class="fa fa-pencil"></i></div>
         <div id="eraser" class="toolBoxItem"><i class="fa fa-eraser"></i></div>
     </div>
     <div id="loadingBlind"></div>
