fixed less calc bug

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -252,7 +252,7 @@
     float: left;
     height: @inputHeight;
     outline: 0;
-    width: ~"calc(100% @{latexButtonWidth})";
+    width: ~"calc(100% - @{latexButtonWidth})";
     border: none;
     background-color: #f6f6f6;
     padding-left: 5px;
