--- a/CollaborationBoard/Views/Board/LatexMessageModal.cshtml
+++ b/CollaborationBoard/Views/Board/LatexMessageModal.cshtml
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Modal title</h4>
+                <h4 class="modal-title">Extended Latex Input</h4>
             </div>
             <div id="latexBody" class="latexBody modal-body">
                 <div id="normalText">
