--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -193,6 +193,8 @@
                 text-overflow: ellipsis;
                 overflow: hidden;
                 width: 50%;
+                padding-right: 3px;
+                padding-left: 3px;
             }
 
             .name {
@@ -201,7 +203,7 @@
                 float: left;
             }
 
-            .time {
+            .date {
                 .detail;
                 text-align: right;
                 float: right;
