--- a/CollaborationBoard/Views/Board/Messenger.cshtml
+++ b/CollaborationBoard/Views/Board/Messenger.cshtml
@@ -18,12 +18,18 @@
                 <h4 class="modal-title">Choose a new name</h4>
             </div>
             <div class="modal-body">
-                <input id="nameChangeInput" type="text" />
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">New Name</label>
+                    <div class="col-sm-7">
+                        <input id="nameChangeInput" type="text" class="form-control" name="Title" placeholder="Name" />
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button id="saveNameButton" type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
+        
     </div>
 </div>
