--- a/CollaborationBoard/Views/Shared/BoardCreationModal.cshtml
+++ b/CollaborationBoard/Views/Shared/BoardCreationModal.cshtml
@@ -11,7 +11,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="newBoardLabel">Create a new board.</h4>
+                <h4 class="modal-title" id="newBoardLabel">Create a new board</h4>
             </div>
             <div class="modal-body">
                 <form id="createBoardForm" class="form-horizontal" action="/Board/Create" method="post">
