--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -1,6 +1,7 @@
 ﻿@mainColor: #779ecb;
 @darkerMainColor: #698ab1;
 @darkestMainColor: #556f8e;
+@superDarkMainColor: #303c4a;
 @lighterMainColor: #aecdf2;
 @lightestMainColor: #c9e2ff;
 @accentColor: #ffd800;
@@ -11,9 +12,7 @@
 
 .bigShadow {
     -webkit-box-shadow: 0px 0px 1000px -25px rgba(0,0,0,0.75);
-    
 }
-
 
 body {
     margin: 0;
@@ -208,6 +207,7 @@ body {
         }
 
         .header {
+            font-family: 'Droid Sans', sans-serif;
             padding-top: 2px;
             padding-left: 2px;
             font-size: 10pt;
@@ -257,6 +257,7 @@ body {
         font-weight: bold;
         font-size: 11pt;
         text-align: center;
+        font-family: 'Droid Sans', sans-serif;
     }
 
     .messageUserRepeat {
