--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -7,10 +7,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <title>@ViewBag.Title</title>
     @Styles.Render("~/bundles/font_awesome")
     @Styles.Render("~/bundles/css")
-    @Styles.Render("~/fonts")
     @Styles.Render("~/katex_css")
     @Styles.Render("~/bundles/app_styles")
 </head>
