--- a/CollaborationBoard/Content/bootstrapStyle.less
+++ b/CollaborationBoard/Content/bootstrapStyle.less
@@ -1,9 +1,30 @@
-﻿.modal-content {
+﻿@import "App/app";
+
+* {
+    outline: none;
+}
+
+.modal-content {
     border-radius: 0px;
 }
 
 .btn {
     border-radius: 0px;
+    border: none;
+    font-weight: bolder;
+}
+
+.btn.btn-primary {
+    background-color: @mainColor;
+    color: @superDarkMainColor;
+}
+
+.btn.btn-primary:hover {
+    background-color: @darkerMainColor;
+}
+
+.btn.btn-primary:hover {
+    background-color: @darkestMainColor;
 }
 
 input[type=text], input[type=password] {
@@ -36,7 +57,13 @@ body.modal-open {
     font-size: 10pt !important;
 }
 
-.modal-header, .modal-footer {
+.modal-header, .modal-footer, .modal-title {
     padding-top: 5px;
     padding-bottom: 5px;
+    border: none;
+    font-family: 'Droid Sans', sans-serif;
+}
+
+.modal label {
+    font-family: 'Droid Sans', sans-serif;
 }
