added a functional color picker

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -23,7 +23,13 @@
     <div id="toolbox">
         <div id="drawer" class="iconButton"><i class="fa fa-pencil"></i></div>
         <div id="eraser" class="iconButton"><i class="fa fa-eraser"></i></div>
+        <div id="colors" class="iconButton"><i class="fa fa-tint"></i></div>
     </div>
+
+    <div id="colorPicker" class="hidden">
+        
+    </div>
+
     <div id="loadingBlind"></div>
 
     @Html.Partial("LatexMessageModal")
