--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -106,6 +106,7 @@ body {
 @toolboxIconSize: 15pt;
 
 #toolbox {
+    .noSelect;
     position: absolute;
     top: 0px;
     left: ~"calc(100vw / 2 - @{toolboxWidth} / 2)";
@@ -366,4 +367,29 @@ body {
     resize: none;
     outline: none;
     border: 1px solid grey;
+}
+
+#colorPicker {
+    position: absolute;
+    box-sizing: content-box;
+    width: 150px;
+    height: 150px;
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.3);
+}
+
+#colorPicker.hidden {
+    display: none;
+}
+
+.color {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+    border-radius: 100%;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
