started adding a slider for thickness

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -24,10 +24,15 @@
         <div id="drawer" class="iconButton"><i class="fa fa-pencil"></i></div>
         <div id="eraser" class="iconButton"><i class="fa fa-eraser"></i></div>
         <div id="colors" class="iconButton"><i class="fa fa-tint"></i></div>
+        <div id="thickness" class="iconButton"><i class="fa fa-sliders"></i></div>
     </div>
 
     <div id="colorPicker" class="hidden">
         
+    </div>
+
+    <div id="thicknessPicker" class="hidden">
+
     </div>
 
     <div id="loadingBlind"></div>
