--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -393,3 +393,16 @@ body {
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
+
+#thicknessPicker {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    width: 150px;
+    height: 20px;
+    background-color: red;
+}
+
+#thicknessPicker.hidden {
+    display: none;
+}
