--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -42,6 +42,16 @@
 
     <script>
         var boardId = "@ViewBag.BoardId";
+
+        var preventScroll = function (e) {
+            e.preventDefault();
+            e.stopPropagation();
+            return false;
+        };
+
+        document.body.addEventListener("scroll", preventScroll);
+        document.body.addEventListener("touchmove", preventScroll)
+        document.body.addEventListener("mousewheel", preventScroll)
     </script>
 
     @Scripts.Render("~/bundles/app_scripts")
